Added Hockey, crashlytics and criticism configurations

--- a/app/src/debug/assets/config.properties
+++ b/app/src/debug/assets/config.properties
@@ -1,4 +1,6 @@
-#properties that will be encrypted by dexguard
+#DEBUG properties that will be encrypted by dexguard
 base_url=https://debug-api.myserver.com/
 flurry_key=123456789DEBUG
 facebook_app_id=987654321DEBUG
+hockeyapp_key=0658e39bed53b23ecf18fa0085a43a0f
+crittercism_app_id=f5280532b6e54aeeb5b6c943dd53fd4c00444503
