--- a/app/src/release/assets/config.properties
+++ b/app/src/release/assets/config.properties
@@ -1,4 +1,6 @@
-#properties that will be encrypted by dexguard
+#LIVE properties that will be encrypted by dexguard
 base_url=https://api.myserver.com/
 flurry_key=123456789LIVE
 facebook_app_id=987654321LIVE
+hockeyapp_key=1912c04940839267a1f8fb82e2a9d39b
+crittercism_app_id=fdf6050300f044cbb99752c4a9394a6400444503
