--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'dexguard'
+//apply plugin: 'dexguard'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -9,8 +10,8 @@ android {
         applicationId "com.scottyab.configexample"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 11
+        versionName "1.1"
     }
     signingConfigs {
         release {
@@ -25,19 +26,31 @@ android {
     buildTypes {
         debug{
             applicationIdSuffix '.debug'
-            minifyEnabled false
+            //dexguard-debug.pro includes -dontobfuscate
+      //      proguardFile getDefaultDexGuardFile('dexguard-debug.pro')
         }
         release {
             minifyEnabled true
-            proguardFile getDefaultDexGuardFile('dexguard-release.pro')
+       //     proguardFile getDefaultDexGuardFile('dexguard-release.pro')
             proguardFile 'dexguard-project.txt'
+            proguardFile 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
+
+
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
+
+    // Crashlytics Kit
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
+        transitive = true
+    }
+
+    compile 'com.crittercism:crittercism-android-agent:5.4.0-rc-1'
 }
