--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         flatDir { dirs '/Users/scottab/Downloads/DexGuard-7.0.22/lib' }
+        maven { url 'https://maven.fabric.io/public' }
         jcenter()
 
     }
@@ -10,6 +11,7 @@ buildscript {
         //v1.1.3 is the required version for DexGuard v7.0.22
         classpath 'com.android.tools.build:gradle:1.3.0'
         classpath ':dexguard:'
+        classpath 'io.fabric.tools:gradle:1.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         flatDir { dirs '/Users/scottab/Downloads/DexGuard-7.0.22/lib' }
+        maven { url 'https://maven.fabric.io/public' }
         jcenter()
     }
 }
